# bigmistake

./: .gitignore  CMakeLists.txt  Makefile  Shader.cpp  Shader.h  a.out  main.cpp
client/: CMakeLists.txt  Makefile  README.md
client/source/: .choose.cpp.BASE.20912.cpp.swp  .choose.cpp.LOCAL.20912.cpp.swp  .choose.cpp.REMOTE.20912.cpp.swp  .choose.cpp.swp  buff.cpp  bukavki.cpp  calc.cpp  choose.cpp  choose.cpp.BACKUP.20912.cpp  choose.cpp.LOCAL.20912.cpp  choose.cpp.REMOTE.20912.cpp  connect.cpp  engine.cpp  healthbar.cpp  main.cpp  menu.cpp  numbers.cpp  objects.cpp  unit.cpp
client/source/header/: buff.h  bukavki.h  calc.h  choose.h  connect.h  engine.h  healthbar.h  menu.h  numbers.h  objects.h  unit.h
client/source/libs/glfw-3.2.1/: Makefile  cmake_install.cmake
client/source/libs/glfw-3.2.1/src/: Makefile  cmake_install.cmake
client/source/shaders/: bukavki.frag  bukavki.vs  choose.frag  choose.vs  healthbar.frag  healthbar.vs  line.frag  line.vs  number.frag  number.vs  object.frag  shader.vs
client/tests/: CMakeLists.txt  test.cpp  testS
server/: main.cpp
source/: Ltext.cpp  buff.cpp  engine.cpp  main.cpp  objects.cpp
source/header/: engine.h  objects.h
source/libs/glfw-3.2.1/: cmake_uninstall.cmake
source/shaders/: object.frag  object.vs  shader.frag  shader.vs
